Realizando la navegacion

--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ExBook es una herramienta para organizar tus notas">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/landingpage.css">
+    <link rel="stylesheet" href="icon/styles.css">
     <title>Landing Page - ExBook</title>
 </head>
 <body>
+    <header class="header">
+        <div class="contenedor">
+            <h1 class="logo">ExBook</h1>
+            <span class="icon-menu-list"></span>
+            <nav class="navegacion">
+                <ul class="menu">
+                    <li class="menu_items"><a class="menu_link" href="">Home</a></li>
+                    <li class="menu_items"><a class="menu_link" href="">About As</a></li>
+                    <li class="menu_items"><a class="menu_link" href="">Contact</a></li>
+                    <li class="menu_items"><a class="menu_link" href="">Login</a></li>
+                </ul>
+
+            </nav>
+        </div>
+    </header>
     
 </body>
 </html>
