Realizando las secciones

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,22 +10,112 @@
     <link rel="stylesheet" href="icon/styles.css">
     <title>Landing Page - ExBook</title>
 </head>
+
 <body>
     <header class="header">
         <div class="contenedor">
             <h1 class="logo">ExBook</h1>
-            <span class="icon-menu-list"></span>
-            <nav class="navegacion">
+            <span class="icon-menu-list" id="boton-menu"></span>
+            <nav class="navegacion" id="navegacion">
                 <ul class="menu">
-                    <li class="menu_items"><a class="menu_link" href="">Home</a></li>
-                    <li class="menu_items"><a class="menu_link" href="">About As</a></li>
-                    <li class="menu_items"><a class="menu_link" href="">Contact</a></li>
-                    <li class="menu_items"><a class="menu_link" href="">Login</a></li>
+                    <li class="menu_items">
+                        <a class="menu_link select" href="">Home</a>
+                    </li>
+                    <li class="menu_items">
+                        <a class="menu_link" href="">Services</a>
+                    </li>
+                    <li class="menu_items">
+                        <a class="menu_link" href="">About As</a>
+                    </li>
+                    <li class="menu_items">
+                        <a class="menu_link" href="">Contact</a>
+                    </li>
+                    <li class="menu_items">
+                        <a class="menu_link" href="">Login</a>
+                    </li>
                 </ul>
-
             </nav>
         </div>
     </header>
-    
+    <div class="banner">
+        <img src="img/bookandpincel.jpg" alt="" class="banner_img">
+        <div class="contenedor">
+            <h2 class="banner_titulo">The best note management</h2>
+            <p class="banner_parrafo">Save your grades and learn to put better machete</p>
+        </div>
+    </div>
+    <main class="main">
+        <div class="contenedor">
+            <section class="informacion">
+                <article class="info_columna">
+                    <img src="img/study.jpg" alt="" class="info_img">
+                    <h2 class="info_titulo">Título 1</h2>
+                    <p class="info_parrafo">aaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+                    </p>
+                </article>
+                <article class="info_columna">
+                    <img src="img/study.jpg" alt="" class="info_img">
+                    <h2 class="info_titulo">Título 2</h2>
+                    <p class="info_parrafo">bbbbbbbbbbbbbbbbbbbbbbb bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
+                    </p>
+                </article>
+                <article class="info_columna">
+                    <img src="img/study.jpg" alt="" class="info_img">
+                    <h2 class="info_titulo">Título 3</h2>
+                    <p class="info_parrafo">cccccccccccccccccccccccc cccccccccccccccccccccccccccccccccccccccccccc
+                    </p>
+                </article>
+            </section>
+            <section class="servicios">
+                <h2 class="section_titulo">Servicios</h2>
+                <div class="servicios_columna">
+                    <img src="img/library.jpg" alt="" class="servicios_img">
+                    <div class="servicios_descripcion">
+                        <h3 class="servicios_titulo">asdfgh</h3>
+                        <p class="servicios_parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla explicabo quas doloremque quos maxime,
+                            expedita, nam consectetur, enim cupiditate nobis est omnis delectus. Ea aliquam ducimus modi
+                            veritatis nihil cupiditate?</p>
+                    </div>
+                </div>
+                <div class="servicios_columna">
+                    <img src="img/library.jpg" alt="" class="servicios_img">
+                    <div class="servicios_descripcion">
+                        <h3 class="servicios_titulo">qwerty</h3>
+                        <p class="servicios_parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora iusto id sed ipsa ut. Facere aliquam
+                            odio, minima libero, molestias, dolor soluta nisi reprehenderit quae iure fugiat aut sint enim?</p>
+                    </div>
+                </div>
+                <div class="servicios_columna">
+                    <img src="img/library.jpg" alt="" class="servicios_img">
+                    <div class="servicios_descripcion">
+                        <h3 class="servicios_titulo">zxcvbn</h3>
+                        <p class="servicios_parrafo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi debitis ipsa cupiditate culpa ea,
+                            odio error praesentium pariatur saepe, earum explicabo eum nostrum et ipsam unde ullam quibusdam
+                            voluptatem dignissimos.</p>
+                    </div>
+                </div>
+                <div class="servicios_columna">
+                    <img src="img/library.jpg" alt="" class="servicios_img">
+                    <div class="servicios_descripcion">
+                        <h3 class="servicios_titulo"></h3>
+                        <p class="servicios_parrafo">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, quos officiis expedita ratione
+                            delectus iusto molestiae totam modi porro natus ut cumque, harum quis magnam voluptate molestias,
+                            facere deserunt magni!</p>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="social">
+            <a href="" class="icon-facebook"></a>
+            <a href="" class="icon-google-plus"></a>
+            <a href="" class="icon-menu-list"></a>
+            <a href="" class="icon-vine"></a>
+        </div>
+        <p class="copy">&copy; ExBook 2018 - Todos los derechos resercados</p>
+    </footer>
+    <script src="js/menu.js"></script>
 </body>
+
 </html>
