--- a/sign-in.html
+++ b/sign-in.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/styles/normalize.css">
     <link rel="stylesheet" href="assets/styles/sign-in.css">
     <link rel="shortcut icon" href="assets/img/helmet.png">
-    <title>Sing In</title>
+    <title>Sign In</title>
 </head>
 
 <body>
@@ -34,17 +34,16 @@
 
                     <button class="btn">Sing In</button>
                 </form>
-                <h5>Need a account?</h5>
-                <a href="http://">Register</a>
+                <div class="info">
+                    <h5>Need an account?</h5>
+                    <h5>
+                        <a href="#">REGISTER</a>
+                    </h5>
+                </div>
+                    <!-- <a href="http://">Register</a>-->
+
             </div>
         </div>
-
-
-
-
-
-
-
     </div>
 
 </body>
