tratando de hacerlo responsive

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ExBook es una herramienta para organizar tus notas">
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/landingpage.css">
-    <link rel="stylesheet" href="icon/styles.css">
+    <link rel="stylesheet" href="assets/styles/normalize.css">
+    <link rel="stylesheet" href="assets/styles/landingpage.css">
+    <link rel="stylesheet" href="assets/icon/styles.css">
     <title>Landing Page - ExBook</title>
 </head>
 
@@ -38,7 +38,7 @@
         </div>
     </header>
     <div class="banner">
-        <img src="img/bookandpincel.jpg" alt="" class="banner_img">
+        <img src="assets/img/bookandpincel.jpg" alt="" class="banner_img">
         <div class="contenedor">
             <h2 class="banner_titulo">The best note management</h2>
             <p class="banner_parrafo">Save your grades and learn to put better machete</p>
@@ -48,59 +48,49 @@
         <div class="contenedor">
             <section class="informacion">
                 <article class="info_columna">
-                    <img src="img/study.jpg" alt="" class="info_img">
+                    <img src="assets/img/study.jpg" alt="" class="info_img">
                     <h2 class="info_titulo">Título 1</h2>
-                    <p class="info_parrafo">aaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-                    </p>
+                    <p class="info_parrafo">aaaaaaaaaaaaaaaaaaaaaaa</p>
                 </article>
                 <article class="info_columna">
-                    <img src="img/study.jpg" alt="" class="info_img">
+                    <img src="assets/img/study.jpg" alt="" class="info_img">
                     <h2 class="info_titulo">Título 2</h2>
-                    <p class="info_parrafo">bbbbbbbbbbbbbbbbbbbbbbb bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
-                    </p>
+                    <p class="info_parrafo">bbbbbbbbbbbbbbbbbbbbbbb</p>
                 </article>
                 <article class="info_columna">
-                    <img src="img/study.jpg" alt="" class="info_img">
+                    <img src="assets/img/study.jpg" alt="" class="info_img">
                     <h2 class="info_titulo">Título 3</h2>
-                    <p class="info_parrafo">cccccccccccccccccccccccc cccccccccccccccccccccccccccccccccccccccccccc
-                    </p>
+                    <p class="info_parrafo">cccccccccccccccccccccccc</p>
                 </article>
             </section>
             <section class="servicios">
                 <h2 class="section_titulo">Servicios</h2>
                 <div class="servicios_columna">
-                    <img src="img/library.jpg" alt="" class="servicios_img">
+                    <img src="assets/img/library.jpg" alt="" class="servicios_img">
                     <div class="servicios_descripcion">
                         <h3 class="servicios_titulo">asdfgh</h3>
-                        <p class="servicios_parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla explicabo quas doloremque quos maxime,
-                            expedita, nam consectetur, enim cupiditate nobis est omnis delectus. Ea aliquam ducimus modi
-                            veritatis nihil cupiditate?</p>
+                        <p class="servicios_parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="servicios_columna">
-                    <img src="img/library.jpg" alt="" class="servicios_img">
+                    <img src="assets/img/library.jpg" alt="" class="servicios_img">
                     <div class="servicios_descripcion">
                         <h3 class="servicios_titulo">qwerty</h3>
-                        <p class="servicios_parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora iusto id sed ipsa ut. Facere aliquam
-                            odio, minima libero, molestias, dolor soluta nisi reprehenderit quae iure fugiat aut sint enim?</p>
+                        <p class="servicios_parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="servicios_columna">
-                    <img src="img/library.jpg" alt="" class="servicios_img">
+                    <img src="assets/img/library.jpg" alt="" class="servicios_img">
                     <div class="servicios_descripcion">
                         <h3 class="servicios_titulo">zxcvbn</h3>
-                        <p class="servicios_parrafo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi debitis ipsa cupiditate culpa ea,
-                            odio error praesentium pariatur saepe, earum explicabo eum nostrum et ipsam unde ullam quibusdam
-                            voluptatem dignissimos.</p>
+                        <p class="servicios_parrafo">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="servicios_columna">
-                    <img src="img/library.jpg" alt="" class="servicios_img">
+                    <img src="assets/img/library.jpg" alt="" class="servicios_img">
                     <div class="servicios_descripcion">
                         <h3 class="servicios_titulo"></h3>
-                        <p class="servicios_parrafo">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, quos officiis expedita ratione
-                            delectus iusto molestiae totam modi porro natus ut cumque, harum quis magnam voluptate molestias,
-                            facere deserunt magni!</p>
+                        <p class="servicios_parrafo">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
             </section>
@@ -113,9 +103,9 @@
             <a href="" class="icon-menu-list"></a>
             <a href="" class="icon-vine"></a>
         </div>
-        <p class="copy">&copy; ExBook 2018 - Todos los derechos resercados</p>
+        <p class="copy">&copy; ExBook 2018 - Todos los derechos reservados</p>
     </footer>
-    <script src="js/menu.js"></script>
+    <script src="assets/js/menu.js"></script>
 </body>
 
 </html>
