Enlace a página de registro

--- a/sign-in.html
+++ b/sign-in.html
@@ -37,7 +37,7 @@
                 <div class="info">
                     <h5>Need an account?</h5>
                     <h5>
-                        <a href="#">REGISTER</a>
+                        <a href="sign-up.html">REGISTER</a>
                     </h5>
                 </div>
                     <!-- <a href="http://">Register</a>-->
