Se obtienen los datos y se muestran, solo faltan los styles

--- a/notes.html
+++ b/notes.html
@@ -23,15 +23,10 @@
         </div>
         <button type="button" id="enviar">Click Me!</button>
         <!-- <input type="submit" class="envio" value="Enviar"> -->
-
     </form>
+    <button type="button" id="obtener">JSON</button>
 
-    <div class="card">
-        <div class="container">
-            <h4 class="title">John Doe</h4>
-            <p class="body">Architect & Engineer</p>
-        </div>
-    </div>
+    <div class="card" id="card_view"> </div>
 <script src="assets/js/addNote.js"></script>
 </body>
 
