Side bar and nav bar styles and html

--- a/profile-notes.html
+++ b/profile-notes.html
@@ -8,34 +8,46 @@
     <link rel="shortcut icon" href="assets/img/helmet.png">
     <link rel="stylesheet" href="assets/styles/profile-notes.css">
     <link rel="stylesheet" href="assets/styles/normalize.css">
+    
     <title>Profile</title>
 </head>
 
 <body>
     <div class="wrap">
         <div class="side-bar">
-            <div class="links">
-                <img src="assets/img/user.png">
-                <ul>
-                    <li><a href="#">New Note</a></li>
-                    <li><a href="#">List Notes</a></li>
-                    <li><a href="#">Filter Notes</a></li>
-                    <li><a href="#">New group</a></li>
-                </ul>
+
+            <div class="imag">
+                <img src="assets/img/user.png" width="195px" height="200px">
+                <label>User Name</label>
             </div>
 
+            <ul>
+                <li>
+                    <a href="#">New Note</a>
+                </li>
+                <li>
+                    <a href="#">List Notes</a>
+                </li>
+                <li>
+                    <a href="#">Filter Notes</a>
+                </li>
+                <li>
+                    <a href="#">New group</a>
+                </li>
+                <li>
+                    <a href="#">Log out</a>
+                </li>
+            </ul>
         </div>
 
         <div class="content-right">
-            <div class="nav-bar">
-                <ul>
-                    <li>
-                        <a href="#">Log out</a>
-                    </li>
-                </ul>
-            </div>
+          
         </div>
+
     </div>
+
+
+
 
 </body>
 
