--- a/sign-up.html
+++ b/sign-up.html
@@ -21,21 +21,23 @@
             <h3>
                 Create an account
             </h3>
-            <form action="">
+            <form method="POST" action="https://ex-book-api.herokuapp.com/register">
                 <div class="form-group">
+                    <div class="form-group">
+                        <label for="">Username:</label>
+                        <input type="text" class="form-control" required name="name">
+                    </div>
+
                     <label for="">Email:</label>
-                    <input type="email" class="form-control" required>
-                </div>
-                <div class="form-group">
-                    <label for="">Username:</label>
-                    <input type="text" class="form-control" required>
-                </div>
-                <div class="form-group">
-                    <label for="">Password:</label>
-                    <input type="password" class="form-control" required>
+                    <input type="email" class="form-control" required name="email">
                 </div>
 
-                <button class="btn">Sing up</button>
+                <div class="form-group">
+                    <label for="">Password:</label>
+                    <input type="password" class="form-control" required name="password">
+                </div>
+
+                <button class="btn" type="submit">Sing up</button>
 
             </form>
         </div>
