--- a/sign-in.html
+++ b/sign-in.html
@@ -21,18 +21,18 @@
             </div>
 
             <div class="container-form">
-                <form>
+                <form method="POST" action="https://ex-book-api.herokuapp.com/login">
                     <div class="form-group">
-                        <label for="">Username</label>
-                        <input type="text" class="form-control" required>
+                        <label for="">Email</label>
+                        <input type="email" class="form-control" required name="email">
                     </div>
 
                     <div class="form-group">
                         <label for="">Password</label>
-                        <input type="password" class="form-control" required>
+                        <input type="password" class="form-control" required name="password">
                     </div>
 
-                    <button class="btn">Sing In</button>
+                    <button class="btn" type="submit">Sing In</button>
                 </form>
                 <div class="info">
                     <h5>Need an account?</h5>
